<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/playerScoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="12dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/horizontal25"
        app:layout_constraintEnd_toStartOf="@+id/vertical33"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/highScoreButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@color/darkRed"
        android:padding="10dp"
        android:text="@string/high_score"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical33"
        app:layout_constraintTop_toTopOf="@+id/horizontal95" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:onClick="mainMenu"
        android:background="@color/darkRed"
        android:padding="10dp"
        android:text="@string/main_menu"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical33"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal95" />

    <Button
        android:id="@+id/bottomRightButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical33"
        app:layout_constraintTop_toTopOf="@+id/horizontal50" />

    <Button
        android:id="@+id/bottomLeftButton"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal95"
        app:layout_constraintEnd_toStartOf="@+id/vertical33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal50" />

    <Button
        android:id="@+id/topRightButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical33"
        app:layout_constraintTop_toTopOf="@+id/horizontal25" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@color/darkRed"
        android:padding="10dp"
        android:text="@string/play_again"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontal25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical33"
        app:layout_constraintTop_toTopOf="@+id/horizontal12" />

    <Button
        android:id="@+id/topLeftButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal50"
        app:layout_constraintEnd_toStartOf="@+id/vertical33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal25"
        app:layout_constraintVertical_bias="0.507" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ls_masters_logo"
        app:layout_constraintBottom_toTopOf="@+id/topScoreTV"
        app:layout_constraintEnd_toStartOf="@+id/vertical33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@color/darkRed"
        android:padding="10dp"
        android:text="@string/how_to_play"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontal12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical33"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/topScoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/top_score"
        app:layout_constraintBottom_toTopOf="@+id/playerScoreTV"
        app:layout_constraintEnd_toStartOf="@+id/vertical33"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/messageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/horizontal95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal25"
        app:layout_constraintVertical_bias="0.502" />
</androidx.constraintlayout.widget.ConstraintLayout>